Updating skills for the project

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                             <li>Explored trade-offs between arithmetic intensity, register usage, and SM occupancy to maximize double-precision throughput.</li>
                             <li>Visualized performance with AI vs. GFLOP/s charts at L1, L2, and DRAM levels, achieving up to ~4.7% improvement over baseline implementation.</li>
                         </ul>
-                        <strong>Skills:</strong> C, Operating Systems, Kernel Development, Process Management, Concurrency, Synchronization, Deadlock Prevention, Thread Scheduling, System Calls, Debugging.
+                        <strong>Skills:</strong> OpenACC, Nsight Compute, Roofline Analysis, GPU Performance Tuning, Cache Blocking, Occupancy Optimization, Arithmetic Intensity, Fortran, CUDA Profiling.
                     </li>
                     <li class="w3-padding-16">
                         <strong>CS 571 – OS/161 Kernel Development</strong> 
