Kuberenetes the hard way

--- a/index.html
+++ b/index.html
@@ -130,6 +130,18 @@
             <div class="w3-content w3-justify" style="max-width:600px">
                 <ul class="w3-ul">
                     <li class="w3-padding-16">
+                        <strong>Kubernetes The Hard Way - Replication </strong> 
+                        <br>
+                        <a href="" target="_blank">GitHub Repository</a>
+                        <br>
+                        Replication of Kubernetes The Hard Way by Kelsey
+                        <ul>
+                            <li>WIP</li>
+                            
+                        </ul>
+                        <strong>Skills:</strong> Kuberenetes
+                    </li>
+                    <li class="w3-padding-16">
                         <strong>GPU Kernel Performance Optimization – Roofline Analysis</strong> 
                         <br>
                         <a href="github.com/rashwanth/RooflineAnalysis_On_NVIDIA_GPU" target="_blank">GitHub Repository</a>
